<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <android.support.v4.view.ViewPager
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="250dp">
        </android.support.v4.view.ViewPager>

            <android.support.design.widget.TabLayout
                app:tabIndicatorHeight="0dp"
                android:id="@+id/tab"
                app:tabBackground="@drawable/indicator_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/slider"
                app:tabGravity="center"
                >
            </android.support.design.widget.TabLayout>

        <ImageView
              android:id="@+id/flipper"
              android:layout_below="@id/tab"
              android:layout_width="match_parent"
              android:layout_height="0dp"/>

     <TextView
         android:id="@+id/videotext"
         android:layout_below="@+id/flipper"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/videohome"
         android:textStyle="bold"
         android:textSize="15sp"
         android:layout_marginStart="8dp"
         android:textColor="#ffffff"/>
    <android.support.v7.widget.RecyclerView
        android:layout_below="@+id/videotext"
        android:id="@+id/recycleviewhome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>

        <RelativeLayout
            android:id="@+id/rel2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recycleviewhome"
            android:layout_marginTop="5dp"
            >
            <TextView
                android:id="@+id/business"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/film"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginStart="8dp"
                android:textColor="#ffffff"/>
            <TextView
                android:id="@+id/more1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/morehome"
                android:textSize="15sp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
               />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_more_vert_black_24dp"
                android:layout_alignParentEnd="true"
                android:layout_alignRight="@+id/more1"
                />
        </RelativeLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycleviewhome4"
            android:layout_below="@+id/rel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </android.support.v7.widget.RecyclerView>

        <RelativeLayout
            android:id="@+id/rel3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recycleviewhome4"
            android:layout_marginTop="5dp"
            >
            <TextView
                android:id="@+id/engineering"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music_video"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginStart="8dp"
                android:textColor="#ffffff"/>
            <TextView
                android:id="@+id/more2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/morehome"
                android:textSize="15sp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="30dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_more_vert_black_24dp"
                android:layout_alignParentEnd="true"
                android:layout_alignRight="@+id/more2"
                />
        </RelativeLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycleviewhome5"
            android:layout_below="@+id/rel3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </android.support.v7.widget.RecyclerView>

        <RelativeLayout
      android:id="@+id/view_layout"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/recycleviewhome5"
            android:layout_marginTop="5dp">
      <TextView
          android:id="@+id/musictext"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="MUSIC"
          android:textSize="15sp"
          android:textStyle="bold"
          android:textColor="#ffffff"
          android:layout_marginStart="8dp"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycleviewhome2"
        android:layout_below="@+id/musictext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>

      <TextView
          android:id="@+id/documrnttext"
          android:layout_below="@+id/recycleviewhome2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="DOCUMENT"
          android:textStyle="bold"
          android:textSize="15sp"
          android:textColor="#ffffff"
          android:layout_marginTop="5dp"
          android:layout_marginStart="8dp"
          />
      <android.support.v7.widget.RecyclerView
          android:id="@+id/recycleviewhome3"
          android:layout_below="@+id/documrnttext"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content">
      </android.support.v7.widget.RecyclerView>

    </RelativeLayout>

    </RelativeLayout>
    </ScrollView>

</RelativeLayout>